@startuml

class Main << (O,#FFD036) Object >>
package projectiles {
class Projectiles << (O,#FFD036) Object >>
class Projectile
}
package places {
class Grid
class Place
}
package mvc {
class MVC
class Model
class Controller
class View
class UIButton
}
package insects {
abstract class Insect
class Ant
class Bee
}
package colony {
class Colony
}

Main *-- "1" MVC
MVC o-- "1" Model
MVC o-- "1" Controller
MVC o-- "1" View
Controller o-- "1" Model
Controller o-- "1" View
View o-- "1" Controller
View *-- "*" UIButton

Model o-- "1" Colony
Model *-- "1" Grid
Model ..> Projectiles

Grid *-- "*" Place
Place *-- "0-1" Ant
Place *-- "*" Bee

Insect o-- "1" Place
Ant o-up- "1" Colony

Insect <|-- Ant
Insect <|-- Bee

Projectiles *-- "*" Projectile
Projectile o-- "1" Insect

@enduml
